tests/valid/lifetime/elision_explicit_input_return.facet
fn id<'a>(r: unrestricted &'a unrestricted isize) -> unrestricted &unrestricted isize {
    r
}
