tests/invalid/lifetime/hrt_bound_lifetime_escape.facet
fn bad<'a>(r: unrestricted &'a unrestricted isize) -> unrestricted &'missing unrestricted isize {
    r
}
